--- a/style.css
+++ b/style.css
@@ -30,7 +30,26 @@ h2 {
 }
 
 #Clicker {
+  margin: 0 auto;
   padding: 50px;
+  padding-top: 100px;
   padding-left: 100px;
   padding-right: 100px;
+  user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  height: 100px;
+  width: 200px;
+  border-radius: 10px;
+  font-size: 30px;
+  font-family: sans-serif;
+  background-color: #3d475e;
+  color: white;
+  font-style: oblique;
+  border-width: 6px;
+  border-style: solid;
+  font-weight: bold;
+  border-color: white;
 }
